removed staff login

--- a/index.html
+++ b/index.html
@@ -345,7 +345,6 @@
                     <div style="margin-top: 20px; padding: 15px; background: #f0f0f0; border-radius: 5px;">
                         <p><strong>Demo Credentials:</strong></p>
                         <p>Admin: admin / password</p>
-                        <p>Staff: staff / staff123</p>
                         <p>Student: student / student123</p>
                     </div>
                 </div>
@@ -365,7 +364,7 @@
             // Validate credentials
             const credentials = {
                 'admin': { password: 'password', role: 'admin' },
-                'staff': { password: 'staff123', role: 'staff' },
+                //'staff': { password: 'staff123', role: 'staff' },
                 'student': { password: 'student123', role: 'student' }
             };
 
